tests/valid_seq/indirect_import_two_paths_helper_3.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module indirect_import_two_paths_helper_3.
:- interface.

:- type indirect_import_two_paths_helper_3.foo == int.
