tests/invalid_make_int/missing_interface_import_test_2_helper_1.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module missing_interface_import_test_2_helper_1.
:- interface.

:- type partition_id == int.
